Fix issue #55 - blank graph name detection